# metad699-assignment1

./: .gitignore  README.md  assignment1.ipynb  pyproject.toml
