[project]
name = "assignment1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "latex>=0.7.0",
    "matplotlib>=3.10.7",
    "nbconvert>=7.16.6",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "pandoc>=2.4",
    "seaborn>=0.13.2",
]
